Add rounds input for round adjustments

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <p class="round-result"></p>
             <p class="match-result"></p>
         </div>
+        <div class="round-adjust">
+            <label>Enter number of rounds: </label>
+            <input type="number" min="1" value="5" required />
+            <button>Play</button>
+        </div>
 
         <script src="rockpaperscissors.js"></script>
     </body>
